Fixes fixes fixes

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -55,6 +55,7 @@ CSA_liberty_ship:0 "Liberty Ships"
 CSA_syndicalism_arsenal:0 "Arsenal of Syndicalism"
 CSA_longist_remnants:0 "Longist Remnants"
 CSA_mexican_american_treaty:0 "Mexican-American Friendship Treaty"
+
 ### Parties ###
 CSA_totalist_party:0 "CSA"
 CSA_totalist_party_long:0 "Combined Syndicates of America's Totalist Strand"
@@ -360,7 +361,7 @@ CSA_war_plan_black_desc:0 "The time has come to strike down the great reactionar
 CSA_join_phalanstere:0 "Join the Phalanstere"
 CSA_join_phalanstere_desc:0 ""
 CSA_war_plan_red:0 "War Plan Red"
-CSA_war_plan_red_desc:0 "The British Royal family in Canada repersents one of the most dangerous enemies to the American people. We must begin planning on how to fight the Canadians and their Allies."
+CSA_war_plan_red_desc:0 "The British Royal family in Canada represents one of the most dangerous enemies to the American people. We must begin planning on how to fight the Canadians and their Allies."
 CSA_great_northern_wall:0 "Great Northern Wall"
 CSA_great_northern_wall_desc:0 "We must build up the border between the CSA and Canada. We shall build forts along the border to have a wall against the Northern Tyrants."
 CSA_naval_exrcises:0 "Naval Exercises"
@@ -393,7 +394,7 @@ CSA_dominican_interventiom:0 "Dominican Republic Intervention"
 CSA_dominican_interventiom_desc:0 "We have liberated the comrades in Haiti now it is time to help liberate our comrades in the Dominican Republic. Their chains shall be broken and the people shall throw off the shackles of wage slavery. "
 CSA_brazilian_intervention:0 "Intervention in Brazil"
 CSA_brazilian_intervention_desc:0 "Brazil is a hot bed of Syndicalism and with their own revolution coming, it would not do if we do not do our part and ignore the plight of our comrades in the Brazil. We should do everything that we can to help the revolution there and if it fails there, we should do our part to continue it. "
-CSA_intervene_columbia:0 "Columbian Intervention"
+CSA_intervene_columbia:0 "Colombian Intervention"
 CSA_intervene_columbia_desc:0 "Columbia is a country that is ripe to spread syndicalism to. We need to do our part and help liberate the workers down in Columbia and free them from the reactionaries holding them back. "
 CSA_intervene_la_plata:0 "Intervene in La Plata"
 CSA_intervene_la_plata_desc:0 "With syndicalism established in Brazil, it is time to bring it to La Plata. While the enemies of our Brazilian Comrades, if we wish to have peace in the Americas, we need to help liberate La Plata and break the chains so that peace between Brazil and La Plata can exist."
@@ -487,7 +488,7 @@ combinedsyndicates.17.a:0 "Finally!"
 
 combinedsyndicates.18.t:0 "10 Years Since Bonnie and Clyde Passed Away"
 combinedsyndicates.18.d:0 "These two heroes did a lot of good for our nation then, as they were standing up against the capitalist government! They deserve a special day!"
-combinedsyndicates.18.a:0 "Happy Bonnie and Clyde day, mom."
+combinedsyndicates.18.a:0 "Happy Bonnie and Clyde day, mum."
 combinedsyndicates.19.t:0 "Jack Reed's Illness"
 combinedsyndicates.19.d:0 "The physical health of the Head of the Central Committee, Jack Reed, has been deteriorating for a while now, to the point that a public announcement has had to be made concerning it, as it can no longer be concealed. The exact cause of his illness is currently unknown, but the wasting effects of it are shortening his life. Whilst his passion for the revolution remains untempered, his ability to lead it may not last much longer."
 combinedsyndicates.19.a:0 "How dreadful"
@@ -546,7 +547,7 @@ combinedsyndicates.101.t:0 "Choosing a Deputy Secretary"
 combinedsyndicates.101.d:0 "Now that Elizabeth Gurley Flynn has been chosen as the General Secretary, she must choose who will assist her at the helm of government as her Deputy Secretary."
 combinedsyndicates.101.a:0 "Carlo Tresca's longstanding friendship serves him well"
 combinedsyndicates.101.b:0 "James P. Cannon's union links serve him well"
-combinedsyndicates.101.c:0 "Paul Mattick's hardnosed approach wins favours"
+combinedsyndicates.101.c:0 "Paul Mattick's hard-nosed approach wins favours"
 combinedsyndicates.101.e:0 "Eugene Dennis's union links sweep him to power"
 combinedsyndicates.102.t:0 "Choosing a Deputy Secretary"
 combinedsyndicates.102.d:0 "Having come into power, Norman Thomas must decide who can help him with the Grand American Project."
@@ -567,18 +568,18 @@ combinedsyndicates.104.c:0 "Eugene Dennis's union links sweep him to power"
 combinedsyndicates.104.e:0 "Merge the Posts! Centralisation starts here!"
 combinedsyndicates.105.t:0 "Choosing a Deputy Secretary"
 combinedsyndicates.105.d:0 "Now that Earl Browder has been elected as the General Secretary, he must choose who will assist him at the helm of government as his Deputy Secretary."
-combinedsyndicates.105.a:0 "Paul Mattick's hardnosed approach wins favours"
+combinedsyndicates.105.a:0 "Paul Mattick's hard-nosed approach wins favours"
 combinedsyndicates.105.b:0 "William Z. Foster's genius secures him the job"
 combinedsyndicates.105.c:0 "James W. Ford's longstanding friendship serves him well"
 combinedsyndicates.105.e:0 "Eugene Dennis's union links sweep him to power"
 combinedsyndicates.106.t:0 "Worker's Confederation"
-combinedsyndicates.106.d:0 "The United States has been remade into a decentralized democratic Confederation of Socialistic States. Power is shared largely between the states themselves with the federal government has been weakened. Though, the Federal government is not totally weak to be irrelevant, it has power to help keep the revolution going as well as dealing with foreign governments. The office of the President and Vice President have been replaced by popularly elected General Secretary and Deputy Secretary positions. Congress has been remade into a unicameral legislature. The ideals of Democratic Confederalism have been implemented throughout the government. The new government is truly for the people, by the people, and of the people."
+combinedsyndicates.106.d:0 "The United States has been remade into a decentralised democratic Confederation of Socialistic States. Power is shared largely between the states themselves with the federal government has been weakened. Though, the Federal government is not totally weak to be irrelevant, it has power to help keep the revolution going as well as dealing with foreign governments. The office of the President and Vice President have been replaced by popularly elected General Secretary and Deputy Secretary positions. Congress has been remade into a unicameral legislature. The ideals of Democratic Confederalism have been implemented throughout the government. The new government is truly for the people, by the people, and of the people."
 combinedsyndicates.106.a:0 "Solidarity Forever!"
 combinedsyndicates.107.t:0 "Worker's Federation"
 combinedsyndicates.107.d:0 "The United States has been reforged into a federal republic. The office of President and vice president have been replaced by a General Secretary and deputy secretary that are elected by the people as a whole and not an electoral college. Power is shared between the local States and the Federal government. The Senate has been abolished while the House of Representatives has been strengthened making Congress a unicameral legislature. The ideals of Democratic Socialism are implemented in all aspects of government from the top to the bottom. The new government is truly for the people, by the people, and of the people."
 combinedsyndicates.107.a:0 "Solidarity Forever!"
 combinedsyndicates.108.t:0 "United Socialistic States of America"
-combinedsyndicates.108.d:0 "The United States has been reforged into a centralized republic. The office of president and vice president have been replaced by the offices of General Secretary and Deputy Secretary that are chosen from among the Socialist Party itself. The central government has been strengthened and most of the powers and responsibilities of the state it has taken up. The concept of Democratic Centralism has been established and implemented throughout the government. America has taken a new step into the future and united we shall not fail."
+combinedsyndicates.108.d:0 "The United States has been reforged into a centralised republic. The office of president and vice president have been replaced by the offices of General Secretary and Deputy Secretary that are chosen from among the Socialist Party itself. The central government has been strengthened and most of the powers and responsibilities of the state it has taken up. The concept of Democratic Centralism has been established and implemented throughout the government. America has taken a new step into the future and united we shall not fail."
 combinedsyndicates.108.a:0 "Solidarity Forever!"
 
 
@@ -603,7 +604,6 @@ combinedsyndicates.34.t:0 "New England Revolution Fails!"
 combinedsyndicates.34.d:0 "Our agents in New England were unable to bring a revolution to New England despite being able to have a general strike throughout New England. With the arrest of several of our agents, many are advocating for war as the only way to liberate our brothers and sisters in New England!"
 combinedsyndicates.34.a:0 "They will rue this day"
 combinedsyndicates.34.b:0 "War is not the answer"
-
 
 
 
