--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -7,12 +7,14 @@ JAP_WAR_REP_GER:0 "War Reparations from Japan"
 JAP_WAR_REP_FULL:0 "War Reparations to Germany"
 JAP_WAR_REP_GER_FULL:0 "War Reparations from Japan"
 FNG_CHI_CONQUERED:0 "We Unified China"
-#Informal Empire Mechanic
+
+### Informal Empire Mechanic ###
 FNG_informal_empire_1:0 "Expel the Japanese Bandits!"
 FNG_informal_empire_2:0 "Preservation of the Xinhai Order"
 FNG_informal_empire_3:0 "Mantetsu Influence"
 FNG_informal_empire_4:0 "Pervasive Mantetsu Influence"
 FNG_informal_empire_5:0 "Mantetsu Dominance"
+
 ### Parties ###
 FNG_totalist_party:0 "Manchu Communist Party"
 FNG_totalist_party_long:0 "Manchu Communist Party"
@@ -62,6 +64,7 @@ FNG_LEAVES_JAP:0 "Fengtian breaks away from Japan"
 SQI_ALL_FNG:0 "Shangqing Allies Fengtian"
 SQI_NO_ONE_NAT:0 "Refuse all Offers"
 FNG_SQI_UNION_JAP:0 "Fengtian and Shangqing United"
+
 ### Companies ###
 manchurian_heavy_industries:0 "Manchurian Heavy Industries"
 mudken_arsenal:0 "Mudken Arsenal"
@@ -247,7 +250,7 @@ FNG_The_Ishiwara_Mission_desc:0 "An IJA Colonel by the name of Kanji Ishiwara ha
 ##Naval Branch##
 FNG_The_Navy_of_the_Republic:0 "The Navy of the Republic"
 FNG_The_Navy_of_the_Republic_desc:0 "The Navy of the Republic, more commonly referred to as the Fengtian Navy, currently consists of a small collection of cruisers, destroyers, and re-purposed civilian vessels. The vast majority of its ships are obsolete, dating back to the Guangxu era Beiyang Navy, and morale is low among the sailors."
-FNG_Reorganize_the_Coastal_Defence_Forces:0 "Reorganize the Coastal Defence Forces"
+FNG_Reorganize_the_Coastal_Defence_Forces:0 "Reorganise the Coastal Defence Forces"
 FNG_Reorganize_the_Coastal_Defence_Forces_desc:0 "Because the Fengtian Navy has no realistic way of opposing the larger and newer navy fielded by Qing, its main purpose is coastal defence. In light of recent troubling inadequacies, such as one ship's crew selling their armament, extensive reorganisation and reform is necessary."
 FNG_Expand_Yingkou_Naval_Yard:0 "Expand Yingkou Naval Yard"
 FNG_Expand_Yingkou_Naval_Yard_desc:0 "Yingkou is the Northeast Region's second largest port, after Japanese-held Dalian, and the home of our Navy. If we are to begin any meaningful naval reconstruction project, expansion of the Yingkou Naval Yard is an essential first step."
@@ -340,7 +343,7 @@ fengtian.14.a:0 "We must have peace!"
 fengtian.14.b:0 "NEVER!"
 fengtian.15.t:0 "The Qing have abandoned us!"
 fengtian.15.d:0 "After Fengtian dropped away from Japan, the Qing have decided to back away from us and sign a ceasefire with the treacherous Japanese!"
-fengtian.15.a:0 "We will destory them too!"
+fengtian.15.a:0 "We will destroy them too!"
 fengtian.15.b:0 "Goodbye!"
 fengtian.16.t:0 "The Qing have followed Fengtian"
 fengtian.16.d:0 "The Qing have called for a complete end to hostilities, with the loss of Fengtian we have no border and the Germans are our primary concern anyways."
@@ -458,8 +461,10 @@ fengtian.43.d:0 "With the ousting of the Manchurian Qing dynasty from Peking and
 fengtian.43.a:0 "We should stay in Fengtian"
 fengtian.43.b:0 "Beijing is our new capital"
 fengtian.43.c:0 "Nanjing is our new capital"
-##New Fengtian Events (Flame)##
-#Informal Empire Mechanic
+
+### New Fengtian Events ###
+
+### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
 fengtian.informalempire.1.a:0 "Wansui!"
