--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -9,11 +9,11 @@ GER_doctrine_great_war_desc:0 "The Weltkrieg was won in the trenches. The core p
 GER_doctrine_great_war_2:0 "Weltkrieg School"
 GER_doctrine_great_war_2_desc:0 "By expanding on lessons learned during the Weltkrieg we can improve our military strategy."
 GER_doctrine_mobile:0 "Motorised Divisions"
-GER_doctrine_mobile_desc:0 "While a machine-gun nest and a trench is almost impassable to infantry, panzers have shown that modern war need not be stale and immobile. While we should lean back on a large infantry army, armored fists should be utilised to tear enemy lines apart."
+GER_doctrine_mobile_desc:0 "While a machine-gun nest and a trench is almost impassable to infantry, panzers have shown that modern war need not be stale and immobile. While we should lean back on a large infantry army, armoured fists should be utilised to tear enemy lines apart."
 GER_doctrine_mobile_2:0 "Mobility School"
 GER_doctrine_mobile_2_desc:0 "Swift manoeuvres, encircling and cutting off pockets of resistance is the way of the future. Motorised infantry can reach tactically important locations in days where traditional infantry would need weeks. The trenches of the Weltkrieg are a thing of the past. For good."
 GER_doctrine_mobile_3:0 "Invest in Panzer Factories"
-GER_doctrine_mobile_3_desc:0 "With a little directed investment, we could raise productivity of our armor factories by quite a lot. Some of our more conservative-minded generals will not approve of this investment, though."
+GER_doctrine_mobile_3_desc:0 "With a little directed investment, we could raise productivity of our armour factories by quite a lot. Some of our more conservative-minded generals will not approve of this investment, though."
 
 GER_mil_expansion_naval_1:0 "Finish 1934 Navy Plan"
 GER_mil_expansion_naval_1_desc:0 "The Kaiserliche Marine stands unchallenged in any sea on the planet. For now. The Union of Britain, The French, The Americans and the Japanese will all jealously try to outdo us. If left unchecked, our naval domination will end. We should continue the large navy modernisation project initiated back in 1934."
@@ -201,7 +201,7 @@ GER_restore_country_rights_desc:0 ""
 GER_babelsberg:0 "Expand Babelsberg"
 GER_babelsberg_desc:0 ""
 
-### Domestic Events
+### Domestic Events ###
 
 gerdom.1.t:0 "The Constitution of the German Reich"
 gerdom.1.d:0 "After the crushing defeat of the Second French Empire by forces of the North German Federation, our constitution was signed in 1871 by representatives of the North German Federation and of four Southern German states. This constitution put the Southern German states under the influence of the North German Federation, thus giving the enlarged entity a new identity as the Deutsches Reich. \n\nAccording to the constitution, the empire was a federation of 25 German states. The Bundespräsidium was held by the King of Prussia, who had the title of German Emperor. The Emperor appointed the Chancellor, the head of government and chairman of the Bundesrat, the council of representatives of the German states. Laws were enacted by the Bundesrat and the Reichstag, the Imperial Diet elected by male Germans above the age of 25 years. \n\nHowever, it is the Emperor, not the Bundesrat or the Reichstag, who leads the power in the German Empire. With an option to dissolve the Reichstag on a whim, it is clear that the main political power in the German Empire rests not in Reichstag, elected by the people, but in the hands of the non-elected German Emperor. Another issue is the Prussian three-class voting system, which has remained unchanged since 1849. \n\nOver sixty years after the founding of the Kaiserreich, the liberals and social democrats are growing increasingly disgruntled with this status of things and our constitution may see large revisions in the next few years..."
@@ -809,7 +809,7 @@ gerfor.42.d:0 "After the ultimatum was received by London they quickly sent orde
 
 gerfor.43.t:0 "Treaty with Ireland"
 gerfor.43.d:0 "With the Syndicalists awakening all across the world it is crucial for Mitteleuropa to help potential allies whenever possible. With Irish sympathies swayed towards Germany a possibility to gain a strong foothold just under the socialists' noses appears."
-gerfor.43.a:0 "Offer Ireland aid if they join Mittleeuropa"
+gerfor.43.a:0 "Offer Ireland aid if they join Mitteleuropa"
 
 gerfor.44.t:0 "Germany offers us a treaty"
 gerfor.44.d:0 "The German ambassador has approached us today with an offer: If Ireland agrees to join Mitteleuropa Germany would invest in our economy and military. While the benefits from this deal would be great there are some in the government who are unwilling to rely on foreign aid..."
@@ -896,7 +896,7 @@ gerfor.62.t:0 "Bulgaria will give us some aid!"
 gerfor.62.d:0 "Bulgaria listened to our plea for help but decided not to join our alliance. Instead they will send supplies and volunteers to help in our struggle against Syndicalism!"
 gerfor.62.a:0 "It's better than nothing!"
 
-### Flavour events
+### Flavour Events ###
 
 gerdom.101.t:0 "The Great Crusade"
 gerdom.101.d:0 "Right-wing circles have been calling for a crusade against Commune of France ever since communards managed to oust legal French government from mainland France. Now their wishes have finally come true, as state of war exist between our glorious Vaterland and the nest of syndicalist vipers. After Kaiser Wilhelm II explained in a special radio address reasons for Germany's involvement in another war with France and called for eradication of final obstacle to achieving "A Place in the Sun" thousands of young Germans rushed to enlist in the military, following the example of Kaiser's grandsons, and civilians began gathering on streets manifesting their support for war. After catastrophic crisis, German nation is united once again. Long live Germany! Long live the Kaiser!"
@@ -940,7 +940,7 @@ gerfla.8.t:0 "Tenth anniversary of von Tirpitz' death"
 gerfla.8.d:0 "Today is the tenth anniversary of the death of the Great Chancellor and Admiral Alfred von Tirpitz. As the eight Chancellor and Commander of the German Navy Tirpitz led the Kaiserreich out of the Ludendorff dicatorship, initiating the Golden Age that lasted through the Twenties until his death. \n\nAfter his death, his Deutsche Vaterlandspartei (German Fatherland party, DVLP), reformed into the Junker party it is today under their new leader, Alfred Hugenberg, opening the way for the von Papen's Deutschkonservative Partei (German Conservative Party, DKP). And while the Reich enjoyed prosperity under his reign, he also continued o hold off on fulfilling the Kaiser's Easter Promises from 1917, leaving us with some troubles in the past years. \n\nStill, his prestige is enourmous, and the anniversary of his death has been accompanied by public demonstrations of respect all across the Empire."
 gerfla.8.a:0 "And what a giant he was!"
 
-### Ideas
+### Ideas ###
 black_guarantee:0 "Guaranteed holdings of private individuals"
 GER_black_monday:0 "Black Monday"
 GER_black_monday1:0 "Schachtplan"
@@ -967,7 +967,7 @@ GER_post_idea:0 "German Post Office"
 GER_embrace_faud_idea:0 "Freie Arbeiterunion Deutschlands"
 DCGB:0 "Deutscher Christlicher Gewerkschaftsbund"
 
-### Tooltips
+### Tooltips ###
 GER_mackensen_retires:0 "You can now reform the military command"
 GER_army_reform:0 "You can now reform the military command"
 german_panzers:0 "New Panzer divisions will be built"
@@ -996,7 +996,7 @@ navy_1934_complete:0 "1934 Navy Program completed"
 GER_parlamentsvertrauen_tp:0 "Election results will determine governments."
 GER_disband_reichstag_tp:0 "Elections will not be held."
 
-### Opinion Modifiers
+### Opinion Modifiers ###
 sri_lanka:0 "Imperialist Bastard"
 agriculture_help_denied:0 "Refused help"
 agriculture_help_granted:0 "Granted help"
@@ -1017,11 +1017,6 @@ wll_int:0 "Snubbed us"
 give_holl:0 "The Holland Award"
 occupy_mor:0 "Occupation of Morocco"
 
-### Theorists ###
-hahn_meitner:1 "Hahn & Meitner"
-konrad_zuse:0 "Konrad Zuse"
-german_research_name:0 "Kaiser Wilhelm Society"
-german_research_desc:0 "The Kaiser Wilhelm society is the scientific wing of Mittleuropa aimed at helping to advance science throughout Europe and beyond."
 ### Companies ###
 krupp:0 "Krupp"
 vereinigte_stahlwerke:0 "Vereinigte Stahlwerke AG"
@@ -1061,7 +1056,7 @@ Kaiserliche_werft_wilhelmshaven:0 "Kaiserliche Werft Wilhelmshaven"
 schichau_werke:0 "Schichau-Werke"
 vulcan_stettin:0 "AG Vulcan Stettin"
 
-### Parties
+### Parties ###
 GER_totalist_party:0 "RAM"
 GER_totalist_party_long:0 "Rote-Armee-Miliz"
 GER_radical_socialist_party:0 "BGB"
