--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -1,11 +1,10 @@
 ﻿l_english:
 
-#################################
-#		Focus Tree				#
-#################################
+### Foci ###
 HAW_politics:0 "Future of Hawaii"
 HAW_politics_desc:0 ""
-####Politics####
+
+### Politics Foci ###
 HAW_monarchy:0 "Restore the Monarchy"
 HAW_monarchy_desc:0 ""
 HAW_return_ceded_lands:0 "Return the Ceded Lands"
@@ -14,7 +13,7 @@ HAW_constitutional_monarchy:0 "Constitutional Monarchy"
 HAW_constitutional_monarchy_desc:0 ""
 HAW_punana_leo:0 "Punana Leo"
 HAW_punana_leo_desc:0 ""
-HAW_hawaiian_renassiance:0 "Hawaiian Renassiance"
+HAW_hawaiian_renassiance:0 "Hawaiian Renaissance"
 HAW_hawaiian_renassiance_desc:0 ""
 HAW_republic:0 "Hawaiian Republic"
 HAW_republic_desc:0 ""
@@ -24,17 +23,18 @@ HAW_republicanism:0 "Republicanism"
 HAW_republicanism_desc:0 ""
 HAW_education_expansion:0 "Education Expansion" 
 HAW_education_expansion_desc:0 ""
-HAW_multi_culturalism:0 "Multi-Cultralism"
+HAW_multi_culturalism:0 "Multiculturalism"
 HAW_multi_culturalism_desc:0 ""
 HAW_hawaiian_revolution:0 "Hawaiian Revolution"
 HAW_hawaiian_revolution_desc:0 ""
-HAW_pinapple_union:0 "Pinapple Union"
+HAW_pinapple_union:0 "Pineapple Union"
 HAW_pinapple_union_desc:0 ""
 HAW_socialist_education:0 "Socialist Education"
 HAW_socialist_education_desc:0 ""
 HAW_peoples_victory:0 "People's Victory"
 HAW_peoples_victory_desc:0 ""
-####Economics####
+
+### Economy Foci ###
 HAW_building_our_economy:0 "Building Our Economy"
 HAW_building_our_economy_desc:0 ""
 HAW_foreign_investment:0 "Foreign Investment" 
@@ -49,7 +49,8 @@ HAW_land_reform:0 "Land Reform"
 HAW_land_reform_desc:0 ""
 HAW_thriving_economy:0 "Thriving Economy"
 HAW_thriving_economy_desc:0 ""
-####Navy####
+
+### Navy Foci ###
 HAW_navy:0 "Hawaiian Navy"
 HAW_navy_desc:0 ""
 HAW_submarine_doctrines:0 "Submarine Doctrines"
@@ -70,27 +71,29 @@ HAW_trade_interdiction:0 "Trade Interdiction"
 HAW_trade_interdiction_desc:0 ""
 HAW_carriers:0 "Carrier Support"
 HAW_carriers_desc:0 ""
-####army####
+
+### Army Foci ###
 HAW_army:0 "Hawaiian National Guard"
 HAW_army_desc:0 ""
 HAW_focus_on_planning:0 "High Command"
 HAW_focus_on_planning_desc:0 ""
 HAW_superior_fire_power:0 "Superior Fire-Power"
 HAW_superior_fire_power_desc:0 ""
-HAW_honolulu_rifles:0 "Modernized Guns"
+HAW_honolulu_rifles:0 "Modernised Guns"
 HAW_honolulu_rifles_desc:0 ""
 HAW_military_factories:0 "Military Build-Up"
 HAW_military_factories_desc:0 ""
 HAW_strategic_information_services:0 "Strategic Information Services"
 HAW_new_army:0 "A Modern Army"
-####Air Force####
+
+### Air Foci ###
 HAW_airforce:0 "Create the Hawaiian Air-Force"
 HAW_airforce_desc:0 ""
-HAW_fighters:0 "Favor Fighters"
+HAW_fighters:0 "Favour Fighters"
 HAW_fighters_desc:0 ""
 HAW_close_air_support:0 "Close Air Support"
 HAW_close_air_support_desc:0 ""
-HAW_bombers:0 "Favor Bombers"
+HAW_bombers:0 "Favour Bombers"
 HAW_bombers_desc:0 ""
 HAW_naval_bombers:0 "Naval Bombers"
 HAW_naval_bombers_desc:0 ""
@@ -100,7 +103,8 @@ HAW_hawaiian_jets:0 "Hawaiian Jets"
 HAW_hawaiian_jets_desc:0 ""
 HAW_radar:0 "Warning Systems"
 HAW_radar_desc:0 ""
-####Foreign Policy####
+
+### Foreign Policy Foci ###
 HAW_foreign:0 "Foreign Policy"
 HAW_foreign_desc:0 ""
 HAW_american_protectorate:0 "American Protectorate"
@@ -136,9 +140,6 @@ HAW_japanese_friendship_desc:0 ""
 HAW_japanese_tech_sharing:0 "Join Rikagaku Kenkyusho"
 HAW_japanese_tech_sharing_desc:0 ""
 
-
-
-
 ### Parties ###
 HAW_totalist_party:0 "HCP"
 HAW_totalist_party_long:0 "Hawaiian Communist Party"
@@ -172,7 +173,7 @@ HAWENTNO:0 "Hawaii don't join the Entente"
 ARRCSAAGG:0 "Arrested our men"
 CSADEMREF:0 "CSA demands reforms"
 
-### Event Text ###
+### Events ###
 hawaii.1.t:0 "The Territory of Hawaii Revolts"
 hawaii.1.d:0 "After the secession of the California Republic, the Hawaiian Territory, gained in 1893 after the treasonous Queen Liliuokalani was deposed by American Forces, has been lost. The Militia of Molokai, a pro-Hawaiian sovereignty group took up arms last week and rallied the natives to their cause. The last military base was taken today, and we have lost control of the island and possibly of all of our Pacific holdings."
 hawaii.1.a:0 "We should have expected this..."
@@ -213,7 +214,7 @@ hawaii.11.t:0 "The Entente Refuses Hawaii"
 hawaii.11.d:0 "The Entente has refused our request for an alliance, Hawaii will stand alone."
 hawaii.11.a:0 "Damn"
 hawaii.12.t:0 "Expansion of Hawaii's Industry"
-hawaii.12.d:0 "The usual distribution of Hawaii's pineapples had been disrupted due to the American Civil War but the demand for them had not. Dole had emphasized the need to strengthen Hawaii's economy and expand it's industry. The pineapple companies of the islands began increasing production and building more facilities for the increased production."
+hawaii.12.d:0 "The usual distribution of Hawaii's pineapples had been disrupted due to the American Civil War but the demand for them had not. Dole had emphasised the need to strengthen Hawaii's economy and expand it's industry. The pineapple companies of the islands began increasing production and building more facilities for the increased production."
 hawaii.12.a:0 "Behold our pineapples!"
 hawaii.13.t:0 "Resource Expansion"
 hawaii.13.d:0 "The necessity for Hawaii to expand it's resources as well as its industry has prompted a scouring of the islands for any natural resources that could be found."
@@ -227,11 +228,11 @@ hawaii.15.d:0 "The arrival of CSA agitators had enticed the workers of Hawaii in
 hawaii.15.a:0 "We must reform."
 hawaii.15.b:0 "Arresting the CSA agitators should do it."
 hawaii.16.t:0 "Trade Union of Hawaii"
-hawaii.16.d:0 "The Pinapple Union of Hawaii had been slowly gaining power since the Hawaiian government had instituted reforms. The CSA government was divided as to whether this was enough or not. Many believed that the islands should be forced to adopt the ideals of the CSA but there are many who see the islands as making a natural progression to Syndicalism."
+hawaii.16.d:0 "The Pineapple Union of Hawaii had been slowly gaining power since the Hawaiian government had instituted reforms. The CSA government was divided as to whether this was enough or not. Many believed that the islands should be forced to adopt the ideals of the CSA but there are many who see the islands as making a natural progression to Syndicalism."
 hawaii.16.a:0 "Demand Hawaii reforms"
 hawaii.16.b:0 "Let their revolution evolve"
 hawaii.17.t:0 "Trade Union of Hawaii"
-hawaii.17.d:0 "Since the reforms on the island the trade unionists have been gaining more and more power. The CSA had been assisting in the organization of the unions and had been pressuring the Hawaii government for more reforms. The reforms that were proposed would make the islands a virtual puppet of the CSA and are seen by some as just one step to annexation by the CSA. While many were resistant to both ideas, many more saw that they had little choice in the matter"
+hawaii.17.d:0 "Since the reforms on the island the trade unionists have been gaining more and more power. The CSA had been assisting in the organisation of the unions and had been pressuring the Hawaii government for more reforms. The reforms that were proposed would make the islands a virtual puppet of the CSA and are seen by some as just one step to annexation by the CSA. While many were resistant to both ideas, many more saw that they had little choice in the matter"
 hawaii.17.a:0 "Bow to the CSA reforms"
 hawaii.17.c:0 "We will never submit to the CSA"
 hawaii.18.t:0 "Hawaii Becomes a CSA Protectorate"
