--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -9,14 +9,14 @@ USA_reed_victory_tooltip:0 "John Silias, Jack, Reed has won the US election"
 USA_presidential_election_tooltip:0 "The elections have gone ahead..."
 USA_reconstruction_tooltip:0 "The civil war is over, time to rebuild America."
 USA_civil_economy_tooltip:0 "Prepare the economy for civil war!"
-USA_united_provinces_invitation_tooltip:0 "We must make sure that the United Provinces is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centro-America."
-USA_panaman_invention_tooltip:0 "We must make sure that Panama is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centro-America."
+USA_united_provinces_invitation_tooltip:0 "We must make sure that the United Provinces is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centroamérica."
+USA_panaman_invention_tooltip:0 "We must make sure that Panama is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centroamérica."
 USA_cuban_invitation_tooltip:0 "Cuba lies within the American Pond of the Caribbean. It is in our interests to make sure that Cuba remains friendly to the United States and our interests. "
 USA_haitian_invitation_tooltip:0 "Haiti lies within the American Pond of the Caribbean. It is in our interests to make sure that Haiti remains friendly to the United States and our interests. "
 USA_dominican_invitation_tooltip:0 "The Dominican Republic lies within the American Pond of the Caribbean. It is in our interests to make sure that The Dominican Republic remains friendly to the United States and our interests."
 USA_peruvian_invitation_tooltip:0 "The government of Peru stands as a bulwark against syndicalism in the Andes. We should make sure that they remain friendly to American Businesses and of course the American government."
 
-### National Focus - Presidents ###
+### Foci - Presidents ###
 USA_1936_election:0 "The 1936 Election"
 USA_1936_election_desc:0 "The 1936 elections are the most ideological fraught elections in US history to date. Syndicalists and Nationalists, Republicans and Democrats all battle it out at the ballot box to see who will become the President of the United States of America. In the end though only one can be president."
 USA_president_reed:0 "President Reed"
@@ -58,7 +58,7 @@ USA_banking_act_desc:0 ""
 USA_wagner_act:0 "Wagner Act"
 USA_wagner_act_desc:0 ""
 
-### National Focus - MacArthur ###
+### Foci - MacArthur ###
 USA_general_macarthur:0 "General MacArthur"
 USA_general_macarthur_desc:0 ""
 USA_protector_of_democracy:0 "Protector of Democracy"
@@ -86,7 +86,7 @@ USA_military_junta_major_desc:0 ""
 USA_american_ceaser:0 "The American Caesar"
 USA_american_ceaser_desc:0 ""
 
-### National Focus - Army ###
+### Foci - Army ###
 USA_review_military:0 "Review the American Military"
 USA_review_military_desc:0 ""
 USA_army:0 "the US Army"
@@ -117,7 +117,7 @@ USA_fight_for_america_desc:0 ""
 USA_army_rangers:0 "Army Ranger Corps"
 USA_army_rangers_desc:0 ""
 
-### National Focus - Navy ###
+### Foci - Navy ###
 USA_usn:0 "The US Navy"
 USA_usn_desc:0 ""
 USA_battle_ships:0 "Favour Battleships"
@@ -144,7 +144,7 @@ USA_marine_training:0 "Marine Training"
 USA_new_aircraft_carriers:0 "New Aircraft Carriers"
 USA_new_aircraft_carriers_desc:0 ""
 
-### National Focus - Air Force ###
+### Foci - Air Force ###
 USA_usaf:0 "the USAF"
 USA_usaf_desc:0 ""
 USA_air_supremecy:0 "Favour Air Supremacy"
@@ -166,7 +166,7 @@ USA_found_wasp_desc:0 ""
 USA_rocketry:0 "American Rocketry"
 USA_rocketry_desc:0 ""
 
-### National Focus - War Economy ###
+### Foci - War Economy ###
 USA_war_economy:0 "The American War Economy"
 USA_war_economy_desc:0 ""
 USA_move_industry_west:0 "Move Industry West"
@@ -196,7 +196,7 @@ USA_esmwt_desc:0 ""
 USA_militerized_economy:0 "We can do it!"
 USA_militerized_economy_desc:0 ""
 
-### National Focus - Reconstruction ###
+### Foci - Reconstruction ###
 USA_reconstruction:0 "Reconstructing America"
 USA_reconstruction_desc:0 ""
 USA_post_war_america:0 "Post Civil-War America"
@@ -226,7 +226,7 @@ USA_rebuilt_america_desc:0 ""
 USA_america_reborn:0 "America is reborn"
 USA_america_reborn_desc:0 ""
 
-### National Focus - New Deal ###
+### Foci - New Deal ###
 USA_the_new_deal:0 "The Fair Deal"
 USA_the_new_deal_desc:0 ""
 USA_found_fera:0 "Create FERA"
@@ -271,7 +271,7 @@ USA_social_security:0 "Pass Social Security"
 USA_social_security_desc:0 ""
 USA_economy_has_recovered:0 "The Economy Has Recovered"
 
-### National Focus - Foreign Policy ###
+### Foci - Foreign Policy ###
 USA_foreign_policy:0 "Foreign Policy"
 USA_foreign_policy_desc:0 ""
 USA_form_pax_americana:0 "League of American States"
